--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "function-bind": "^1.1.1",
+    "geolib": "^3.3.4",
     "get-intrinsic": "^1.2.1",
     "glob-parent": "^5.1.2",
     "has": "^1.0.4",
